# api-tools

./: README.md  io.github.idevecore.APITools.Devel.json  io.github.idevecore.APITools.json  meson.build
.github/workflows/: main.yml
data/: io.github.idevecore.APITools.appdata.xml.in.in  io.github.idevecore.APITools.desktop.in  io.github.idevecore.APITools.desktop.in.in  io.github.idevecore.APITools.gschema.xml  io.github.idevecore.APITools.gschema.xml.in  io.github.idevecore.APITools.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: actions.py  api-tools.gresource.xml  api-tools.in  apitools.gresource.xml  apitools.in  application.py  define.in  main.py  meson.build  utils.py  window.blp  window.py
src/assets/styles/: styles.css  theme-switcher.css
src/components/: __init__.py
src/components/shortcuts/: index.blp
src/components/theme_switcher/: index.blp  main.py
src/pages/: __init__.py
src/pages/home/: index.blp  main.py
